<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FoodTracker</string>
    <string name="add_meal"> Add Meal</string>
    <string name="info_menu">Info</string>
    <string name="create_menu">Create Meal</string>
    <string name="title_activity_create_meal">FoodTracker</string>
    <string name="create_title">Create Meal</string>
    <string name="name_meal">Name: </string>
    <string name="edit_name"></string>
    <string name="add_menu">Today\'s Meal</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="item1">Item 1: </string>
    <string name="edit_item1"></string>
    <string name="item2">Item 2: </string>
    <string name="edit_item2"></string>
    <string name="item3">Item 3: </string>
    <string name="edit_item3"></string>
    <string name="calories">Calories: </string>
    <string name="cal"></string>
    <string name="carbs">Carbs: </string>
    <string name="edit_carbs"></string>
    <string name="protein">Protein: </string>
    <string name="edit_pro"></string>
    <string name="fat">Fat: </string>
    <string name="edit_fat"></string>
    <string name="done">Done</string>
    <string name="choose_meal">Choose a Meal:</string>
    <string name="summary_title">Detailed Summary</string>
    <string name="sum_brkfast">Breakfast</string>
    <string name="sum_lunch">Lunch</string>
    <string name="sum_dinner">Dinner</string>
    <string name="breakfast_cal">Calories:</string>
    <string name="breakfast_protein">Protein:</string>
    <string name="breakfast_fat">Fat:</string>
    <string name="breakfast_carbs">Carbs:</string>
    <string name="lunch_fat">Fat:</string>
    <string name="lunch_protein">Protein:</string>
    <string name="lunch_carb">Carbs:</string>
    <string name="lunch_cal">Calories:</string>
    <string name="din_fat">Fat:</string>
    <string name="din_cal">Calories:</string>
    <string name="din_protein">Protein:</string>
    <string name="din_carb">Carbs:</string>
    <string name="view_sum">Summary</string>
    <string name="title_activity_summary_meal">FoodTracker</string>

    <string name="history_title">History</string>
    <string name="view_hist">View History</string>
    <string name="title_activity_history">FoodTracker</string>


    <string name="title_activity_home">HomeActivity</string>
    <string name="action_settings">Settings</string>
    <string name="AM">Today\'s Meals</string>
    <string name="CM">Create Meal</string>
    <string name="VS">View Summary</string>

    <string name="VH">View History</string>
    <string name="SG">Set Goal</string>
    <string name="SG">Today\'s Goals</string>
    <string name="home_title">Welcome to FoodTracker</string>
    <string name="history_title">History</string>
    <string name="view_hist">View History</string>
    <string name="title_activity_history">FoodTracker</string>
    <string name="meal_prompt">Choose a Meal Type</string>
    <string name="m_home">Home</string>

    <string-array name="meal_array">
        <item>Breakfast</item>
        <item>Lunch</item>
        <item>Dinner</item>
        <item>Snack</item>
        <item>Other</item>
    </string-array>

    <string name="title_activity_set_goals">FoodTracker</string>
    <string name="menu_setG">Today\'s Goals</string>
    <string name="sevenDayTotals">7 Day Total</string>
    <string name="SetTitle">Goals for Today: </string>
    <string name="setMealsnum">Number of Meals: </string>
    <string name="edit_setMealsnum"></string>
    <string name="edit_setCal"></string>
    <string name="edit_setCarbs"></string>
    <string name="edit_setProt"></string>
    <string name="edit_setFat"></string>
    <string name="title_activity_set_goals_fragment">FoodTracker</string>
    <string name="set_newG">Set New Goals</string>
    <string name="zero">0</string>
    <string name="symbol">/</string>
    <string name="title_activity_globals_class">GlobalsClass</string>
    <string name="hello_world">Hello world!</string>

</resources>
