<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item android:id="@+id/hist_info" android:icon="@android:drawable/ic_menu_info_details" android:title="@string/info_menu" android:showAsAction="ifRoom|collapseActionView"></item>
    <item android:id="@+id/hist_create" android:icon="@android:drawable/ic_menu_add" android:title="@string/create_menu" android:showAsAction="ifRoom|collapseActionView"></item>
    <item android:id="@+id/hist_add" android:icon="@android:drawable/ic_menu_add" android:title="@string/add_menu" android:showAsAction="@android:drawable/ic_menu_add"></item>
    <item android:id="@+id/hist_sum" android:title="@string/view_sum" android:showAsAction="@android:drawable/ic_menu_gallery" android:icon="@android:drawable/ic_menu_gallery"></item>

</menu>