<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item android:id="@+id/sum_info" android:icon="@android:drawable/ic_menu_info_details" android:title="@string/info_menu" android:showAsAction="ifRoom|collapseActionView"></item>
    <item android:id="@+id/sum_create" android:icon="@android:drawable/ic_menu_add" android:title="@string/create_menu" android:showAsAction="ifRoom|collapseActionView"></item>
    <item android:id="@+id/sum_add" android:icon="@android:drawable/ic_menu_add" android:title="@string/add_menu" android:showAsAction="@android:drawable/ic_menu_add"></item>
    <item android:id="@+id/sum_history" android:showAsAction="ifRoom|collapseActionView" android:icon="@android:drawable/ic_menu_recent_history" android:title="@string/view_hist"></item>

</menu>