<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/create_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/create_title"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="26sp" />
        
        <RadioGroup
            android:id="@+id/radio_meal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/rad_brkfast"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/breakfast" />

            <RadioButton
                android:id="@+id/rad_lunch"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lunch" />
	
	        <RadioButton
	            android:id="@+id/rad_dinner"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:text="@string/dinner" />
	        
		</RadioGroup>
		
        
        <LinearLayout
       		 android:layout_width="match_parent"
       		 android:layout_height="wrap_content"
       		 android:orientation="horizontal" >

            <TextView
                android:id="@+id/name_meal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/name_meal"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/edit_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/edit_name" >

                <requestFocus />
            </EditText>
            
		</LinearLayout>		

</LinearLayout>