<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:orientation="vertical"
    tools:context=".HomeActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_title"
        android:gravity="left|center_vertical"
        android:textSize="28sp"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/home_addMeal"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="40dp"
        android:drawableLeft="@android:drawable/ic_menu_add"
        android:gravity="left|center_vertical"
        android:text="@string/AM" />

    <Button
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:text="Today's Meals"
            android:id="@+id/home_todays"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:drawableLeft="@android:drawable/ic_menu_week"
            android:gravity="center_vertical|left"/>

    <Button
        android:id="@+id/home_createMeal"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="20dp"
        android:drawableLeft="@android:drawable/ic_menu_save"
        android:gravity="left|center_vertical"
        android:text="@string/CM" />

    <Button
        android:id="@+id/home_setGoal"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="20dp"
        android:drawableLeft="@android:drawable/ic_menu_edit"
        android:gravity="left|center_vertical"
        android:text="@string/SG" />

    <Button
        android:id="@+id/home_viewHis"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="20dp"
        android:drawableLeft="@android:drawable/ic_menu_my_calendar"
        android:gravity="left|center_vertical"
        android:text="@string/VH" />

    <Button
        android:id="@+id/home_viewSum"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="20dp"
        android:drawableLeft="@android:drawable/ic_menu_agenda"
        android:gravity="left|center_vertical"
        android:text="@string/VS" />

</LinearLayout>